[metadata]
name = dockeb
version = attr: dockeb.__version__
description = The Keb Docker wrapper
long_description = file: README.rst
url = https://github.com/abusque/dockeb
author = Antoine Busque
author_email = antoinebusque@gmail.com
license = MIT
keywords = docker, wrapper, quebec
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    qng >= 1.0.0, < 2.0.0

[options.entry_points]
console_scripts =
    dockeb = dockeb.cli:main
